[workspace]
resolver = "2"
package.version = "0.5.6"
package.description = "Preprocesses a struct with built-in preprocessors"
package.license = "MIT"
package.repository = "https://github.com/patr-cloud/preprocess"
package.documentation = "https://docs.rs/preprocess"
package.homepage = "https://docs.rs/preprocess"
package.readme = "README.md"
package.authors = ["Rakshith Ravi <rakshith.ravi@gmx.com>"]
package.edition = "2021"
package.keywords = ["preprocess", "validation", "api", "test", "process"]
members = ["preprocess", "preprocess-macro", "preprocess-test"]

[workspace.dependencies]
dashmap = { version = "5", default-features = false }
idna = { version = "1", default-features = false }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
regex = { version = "1", default-features = false }
serde = { version = "1", default-features = false }
syn = { version = "2", default-features = false }
url = { version = "2", default-features = false }

preprocess = { version = "=0.5.6", path = "./preprocess" }
preprocess-macro = { version = "=0.5.6", path = "./preprocess-macro" }
