[package]
name = "preprocess-macro"

authors.workspace       = true
description.workspace   = true
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
keywords.workspace      = true
license.workspace       = true
readme.workspace        = true
repository.workspace    = true
version.workspace       = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true, features = ["default"] }
quote       = { workspace = true, features = ["default"] }
regex       = { workspace = true, features = ["default"] }
syn         = { workspace = true, features = ["default", "full"] }
