[package]
name = "preprocess-test"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true

[dependencies]
preprocess = { workspace = true }
serde = { version = "1", features = ["derive"] }
