[package]
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "preprocess-test"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
preprocess = { workspace = true }
serde = { workspace = true, features = ["default", "derive"] }
