[package]
name = "preprocess-test"

authors.workspace       = true
description.workspace   = true
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
keywords.workspace      = true
license.workspace       = true
publish                 = false
readme.workspace        = true
repository.workspace    = true
version.workspace       = true

[lints]
workspace = true

[dependencies]
preprocess = { workspace = true }
serde      = { workspace = true, features = ["default", "derive"] }
