[package]
name = "preprocess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
preprocess_derive = { path = "../preprocess_derive" }

once_cell = "1"
regex = { version = "1" }
serde = { version = "1", features = ["derive"] }
