[package]
name = "preprocess"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true

[dependencies]
dashmap = "5"
idna = "0.4"
preprocess-macro = { workspace = true }
regex = { workspace = true }
url = "2"
